    the multiarch dir instead of to /usr/lib.  Thanks to Riku Voipio for
    pointing out the bug.
  * debian/control: adjust the package descriptions, as the current ones
    use some awkward language that's gone unnoticed for a long time.  Thanks
    to Martin Eberhard Schauer <Martin.E.Schauer@gmx.de> for pointing this
    out.  Closes: #633863.

 -- Steve Langasek <vorlon@debian.org>  Fri, 01 Jul 2011 01:42:19 -0700

pam (1.1.3-2) unstable; urgency=low

  [ Kees Cook ]
  * debian/patches-applied/027_pam_limits_better_init_allow_explicit_root:
    - only report about unknown kernel rlimits when "debug" is set
      (Closes: 625226, LP: #794531).

  [ Steve Langasek ]
  * Build for multiarch.  Closes: #463420.
  * debian/patches-applied/027_pam_limits_better_init_allow_explicit_root:
    don't reset the process niceness for root; since it's root, they can
    still renice to a lower nice level if they need to and changing the
    nice level by default is unexpected behavior.  Closes: #594377.

 -- Steve Langasek <vorlon@debian.org>  Tue, 21 Jun 2011 11:41:12 -0700

pam (1.1.3-1) unstable; urgency=low

  * New upstream release.
    - Fixes CVE-2010-3853, executing namespace.init with an insecure
      environment set by the caller.  Closes: #608273.
    - Fixes CVE-2010-3316 CVE-2010-3430 CVE-2010-3431 CVE-2010-3435.
      Closes: #599832.
  * Port hurd_no_setfsuid patch to new pam_modutil_{drop,restore}_priv
    interface; now possibly upstreamable
  * debian/patches-applied/027_pam_limits_better_init_allow_explicit_root:
    set a better default RLIMIT_MEMLOCK value for BSD kernels.  Thanks to
    Petr Salinger for the fix.  Closes: #602902.
  * bump the minimum version check in maintainer scripts for the restart
    handling.

 -- Steve Langasek <vorlon@debian.org>  Sat, 04 Jun 2011 03:10:50 -0700

pam (1.1.2-3) unstable; urgency=low

  [ Kees Cook ]
  * 027_pam_limits_better_init_allow_explicit_root: load rlimit defaults