@@ -11,6 +11,9 @@ pam (1.1.3-3) UNRELEASED; urgency=low
     use some awkward language that's gone unnoticed for a long time.  Thanks
     to Martin Eberhard Schauer <Martin.E.Schauer@gmx.de> for pointing this
     out.  Closes: #633863.
+  * Build-depend on debhelper 8.9.4 and bump debian/compat to 9 for
+    dpkg-buildflags integration, and drop manual setting of -g -O options in
+    CFLAGS now that we can let dh do it for us
 
  -- Steve Langasek <vorlon@debian.org>  Fri, 01 Jul 2011 01:42:19 -0700
 
